# mmit

./: .gitignore  colab_mores_notebook.py  colab_mores_train.ipynb  hf-peft-guide-r1.html  hf-peft-guide-r4.html  hf-peft-guide-r5.html  hf-peft-guide.html  lilora-interactive.html  lilora-paper-guide.html  lora-strategy-guide.html  mmit-all-code-explained.html  mmit-mole-code-explained.html  mmit-mole-print.html  mmit-mole-walkthrough.html  mmit-mores-architecture.html  mmit-mores-code-explained.html  mmit-mores-print.html  mmit-mores-walkthrough.html  mmit-new-methods-architecture.html  mmit-pytorch-guide-part1.html  mmit-pytorch-guide-part2.html  mmit-pytorch-guide-part3.html  mmit-pytorch-guide.html  mmit-tree.html  mmit-vismask-explained.html  mmit-visual.html  mores-interactive.html  paper-to-code-framework.html  peft-basics.html  peft-methods-guide.html  pyproject.toml  python-cheatsheet.html  transformer-hook-map.html  vlm-survey.html
configs/: colab_dora.yaml  colab_lora.yaml  colab_mole.yaml  colab_mores.yaml  colab_randlora.yaml  colab_reft.yaml  local_dora.yaml  local_freeze.yaml  local_full_ft.yaml  local_l2t.yaml  local_lora.yaml  local_mores.yaml  local_qlora.yaml  ssh_mores.yaml  ssh_qlora.yaml
exercises/: colab_cell2.py  colab_freeze_experiment.py  colab_freeze_notebook.ipynb  colab_full_pipeline.py  drills_答案.html  drills_题目.html  fill_in_blank_答案.html  fill_in_blank_题目.html  hand_calc_attention.html  hand_calc_decoder.html  hand_calc_lora.html  hand_calc_training.html  mores_源码拆解.html  nn_module_拆解.html  nn_module_源码.html  pipeline_解读.md  (+2 more)
(+84 files in other folders)
